--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -249,7 +249,8 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
   // COMMENT CARDS
   .comment-post-card {
     width: 250px;
-    padding: 25px;
+    max-width: 350px;
+    padding: 15px;
     .post-card-body {
       display: flex;
       flex-direction: column;
@@ -261,7 +262,7 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
         flex-direction: column;
         justify-content: space-between;
         .post-card-content {
-          font-size: 16px;
+          font-size: 20px;
         }
         .post-card-detail {
           flex-direction: column;
@@ -278,7 +279,7 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
     .post-card-body {
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
+      justify-content: space-between;
       height: 100%;
       max-width: 180px;
       margin-left: 15px;
@@ -288,28 +289,48 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
       flex-direction: column;
       align-items: end;
       .share-delete-buttons-container {
+        width: 94px;
         margin-top: 10px;
-      }
-      .post-card-delete-button {
-        margin-right: 25px;
+        justify-content: space-around;
+        .post-card-share-button:only-child {
+          margin-left: auto;
+        }
+        .post-card-delete-button {
+          margin-right: 0px;
+        }
       }
     }
 
-    .post-card-content {
-      text-align: right;
-    }
-    .post-card-detail {
+    .post-card-text {
+      flex-grow: 1;
       display: flex;
       flex-direction: column;
-      text-align: right;
+      justify-content: space-between;
+
+      .post-card-content {
+        text-align: right;
+      }
+      .post-card-detail {
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+      }
     }
 
     // IMAGES IN ALL CARDS
     .post-card-image {
       height: 100%;
-      max-width: 300px;
+      // max-width: 300px;
       object-fit: cover;
       margin-bottom: 0px;
+    }
+  }
+
+  // PORTRAIT PHOTO CARDS HAVE RESTRICTED WIDTHS
+  .portrait-photo-post-card {
+    max-width: 400px;
+    .post-card-image {
+      max-width: 200px;
     }
   }
 
