STYLE / configured _colors2 sass file for brainstorming alternate color schemes

--- a/client/styles/_base.scss
+++ b/client/styles/_base.scss
@@ -1,6 +1,7 @@
 // BUTTONS, "BODY" DIVS, OTHER BIG PICTURE THINGS
 
-@use 'colors';
+// @use 'colors';
+@use 'colors2' as colors;
 @use 'mixin_utils';
 
 #app {
