STYLE / color scheme trial

--- a/client/styles/_colors.scss
+++ b/client/styles/_colors.scss
@@ -29,6 +29,9 @@ $primaryBG: #fffcf8;
 $cardBackground: #fdf4ea;
 $cardBackground2: #fdf9f4;
 
+// BORDERS
+$cardBorder: $yeller;
+
 // BOOTSTRAP DEFAULT OVERRIDES
 $primaryColor: $yeller;
 $secondaryColor: $purpley;
