--- a/client/styles/_navbars.scss
+++ b/client/styles/_navbars.scss
@@ -18,7 +18,7 @@
 
 .top-nav {
   justify-content: space-evenly !important;
-  background-color: colors.$greeny;
+  background-image: linear-gradient(45deg, colors.$darkGreeny, 80%,colors.$greeny);
   height: 8vh;
   color: white;
   font-size: 1em;
