--- a/client/styles/_postcard.scss
+++ b/client/styles/_postcard.scss
@@ -5,9 +5,10 @@
 // all cards
 .post-card {
   padding: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0.6px 1.1px 1.1px hsl(0deg 0% 0% / 0.48);;
   margin: 4px auto;
-  border: 1px solid colors.$primaryColor !important;
+  // border: 1px solid colors.$cardBorder !important;
+  border: none !important;
   background-color: colors.$cardBackground !important;
   max-width: 400px;
 }
