--- a/client/styles/_tabs.scss
+++ b/client/styles/_tabs.scss
@@ -16,7 +16,7 @@
 }
 
 .nav-tabs .nav-link {
-  color: rgb(86, 86, 86) !important;
+  color: rgb(121, 120, 120) !important;
   font-family: 'Permanent Marker', serif !important;
   background-color: colors.$tabUnselected !important;
   border-top: 1px solid colors.$tabUnselectedBorder !important;
@@ -37,11 +37,11 @@
 
 // HOME PAGE TABS
 .homePage-tabs .tab-content .active {
-  padding-top: 5px;
+  padding: 5px;
   overflow: scroll;
   // tab height is 42px
   height: calc(64vh - 42px);
-  padding-bottom: 5px;
+  // padding-bottom: 5px;
   // align-items: center;
 }
 
