--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -118,11 +118,11 @@ $info: colors.$infoColor;
 //   border: colors.$secondaryColor solid 2px;
 // }
 
-.btn-success {
-  // keep this
-  background-color: colors.$yeller !important;
-  color: white;
-}
+// .btn-success {
+//   // keep this
+//   background-color: colors.$yeller !important;
+//   color: white;
+// }
 
 // .btn-primary {
 //   // background-color: colors.$yeller !important;
@@ -333,6 +333,12 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
     .post-card-image {
       max-width: 200px;
     }
+  }
+
+  // TODO: figure out idea max-width for
+  // landscape photos
+  .landscape-photo-post-card {
+    max-width: 500px;
   }
 
   // TAB NAV PANE FOR HOME PAGE
@@ -546,8 +552,8 @@ body {
 
 .page-bottom-panel {
   @include mixin_utils.page-bottom-panel;
-  background-color: colors.$cardBackground;
-  border-top: 1px solid colors.$primaryColor;
+  background-color: colors.$lightGreeny;
+  // border-top: 1px solid colors.$primaryColor;
 }
 
 #parade-select {
