--- a/client/styles/_postcard.scss
+++ b/client/styles/_postcard.scss
@@ -7,8 +7,8 @@
   padding: 15px;
   box-shadow: 0.6px 1.1px 1.1px hsl(0deg 0% 0% / 0.48);;
   margin: 4px auto;
-  // border: 1px solid colors.$cardBorder !important;
-  border: none !important;
+  border: 1.5px solid colors.$cardBorder !important;
+  // border: none !important;
   background-color: colors.$cardBackground !important;
   max-width: 400px;
 }
