--- a/client/styles/_colors.scss
+++ b/client/styles/_colors.scss
@@ -38,7 +38,7 @@ $secondaryColor: $purpley;
 $successColor: $greeny;
 $dangerColor: $darkRed;
 $warningColor: $pinky;
-$infoColor: $turq;
+$infoColor: $yeller;
 
 // TEXT
 $lightText: white;
