--- a/client/styles/_modals.scss
+++ b/client/styles/_modals.scss
@@ -1,5 +1,5 @@
-// @use 'colors';
-@use 'colors2' as colors;
+@use 'colors';
+// @use 'colors2' as colors;
 
 #share-modal-button {
   background-color: colors.$yeller;
