CLIENT / configure PostCard for shared content, need to add remove-from-feed functionality

--- a/client/styles/_postcard.scss
+++ b/client/styles/_postcard.scss
@@ -29,6 +29,12 @@
   line-height: normal;
 }
 
+.post-card-sender {
+  font-size: 14px;
+  font-weight: 100;
+  text-align: end;
+}
+
 // image
 .post-card-image {
   margin-bottom: 5px;
