--- a/client/styles/_modals.scss
+++ b/client/styles/_modals.scss
@@ -4,21 +4,21 @@
 #share-modal-button {
   background-color: colors.$yeller;
   margin: 0px 0px 0px 15px;
-  color: black !important;
+  color: black;
 }
 
 #share-modal-dropdown {
   background-color: colors.$yeller;
   margin: 0px 0px 0px 15px;
-  color: black !important;
+  color: black;
 }
 
 .modal-body {
-  background-color: colors.$primaryBG !important;
+  background-color: colors.$primaryBG;
 }
 
 .modal-title {
-  font-family: 'Permanent Marker', serif !important;
+  font-family: 'Permanent Marker', serif;
 }
 
 #modal-header {
@@ -31,7 +31,7 @@
 }
 
 .confirm-action-modal {
-  display: flex !important;
+  display: flex;
   background-color: rgb(0 0 0 / 25%);
 }
 
