--- a/client/styles/_navbars.scss
+++ b/client/styles/_navbars.scss
@@ -6,18 +6,18 @@
   @include mixin_utils.flex-col-center-content;
   height: 50px;
   width: 50px;
-  font-size: 28px !important;
+  font-size: 28px;
 }
 
 .bottom-nav {
-  justify-content: space-evenly !important;
+  justify-content: space-evenly;
   background-color: white;
   height: 12vh;
   border-top: colors.$yeller solid 1px;
 }
 
 .top-nav {
-  justify-content: space-evenly !important;
+  justify-content: space-evenly;
   background-image: linear-gradient(45deg, colors.$darkGreeny, 80%,colors.$greeny);
   height: 8vh;
   color: white;
