--- a/client/styles/_tabs.scss
+++ b/client/styles/_tabs.scss
@@ -36,17 +36,23 @@
 }
 
 // HOME PAGE TABS
-.homePage-tabs .tab-content .active {
+.home-page-tabs .tab-content .active {
   padding: 5px;
   overflow: scroll;
   // tab height is 42px
-  height: calc(64vh - 42px);
-  // padding-bottom: 5px;
-  // align-items: center;
+  max-height: calc(64vh - 42px);
 }
 
 // USER PAGE TABS
-.userPage-tabs .tab-content .tab-pane {
+.user-page-tabs .tab-content .tab-pane {
   height: 62vh;
   overflow: scroll;
+}
+
+// FEED PAGE TABS
+.feed-page-tabs .tab-content .active {
+  padding: 5px;
+  overflow: scroll;
+  // tab height is 42px
+  max-height: calc(78vh - 42px);
 }
