--- a/client/styles/_base.scss
+++ b/client/styles/_base.scss
@@ -69,7 +69,20 @@ body {
 }
 
 .page-bottom-panel {
-  @include mixin_utils.page-bottom-panel;
+  border-radius: 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 9vh;
+  width: 100%;
+  padding: 15px;
+  position: fixed;
+  bottom: 12vh;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  
   background-color: colors.$primaryBG;
   border-top: 1px solid colors.$primaryColor;
 }
