--- a/client/styles/_base.scss
+++ b/client/styles/_base.scss
@@ -1,7 +1,7 @@
 // BUTTONS, "BODY" DIVS, OTHER BIG PICTURE THINGS
 
-@use 'colors';
-//@use 'colors2' as colors;
+// @use 'colors';
+@use 'colors2' as colors;
 @use 'mixin_utils';
 
 #app {
@@ -123,7 +123,7 @@ a {
 
 // FORMS
 .form-check-input:checked {
-  background-color: colors.$pinky;
+  background-color: colors.$infoColor;
 }
 
 .form-check.form-switch {
@@ -134,7 +134,7 @@ a {
 }
 
 .form-check-input:focus {
-  border-color: #cc86fe;
+  border-color: colors.$infoColor;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(149, 13, 253, 0.25);
+  // box-shadow: 0 0 0 0.25rem colors.$infoColor;
 }
