--- a/client/styles/_home_page.scss
+++ b/client/styles/_home_page.scss
@@ -1,5 +1,6 @@
 @use 'mixin_utils';
-@use 'colors';
+// @use 'colors';
+@use 'colors2' as colors;
 
 #create-post-form .btn {
   @include mixin_utils.flex-col-center-content;
