--- a/client/styles/_map_page.scss
+++ b/client/styles/_map_page.scss
@@ -1,5 +1,5 @@
-@use 'colors';
-// @use 'colors2' as colors;
+// @use 'colors';
+@use 'colors2' as colors;
 
 #map-filter-container {
   background-color: colors.$primaryBG;
