--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,5 +1,5 @@
-@use 'colors';
-// @use 'colors2' as colors;
+// @use 'colors';
+@use 'colors2' as colors;
 @use 'mixin_utils';
 
 // SET BOOTSTRAP DEFAULT COLORS BEFORE IMPORTING BS SCSS FILE
@@ -213,7 +213,7 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
       .active {
         display: flex;
         flex-wrap: wrap;
-        gap: 12px;
+        gap: 5px;
       }
     }
   }
@@ -223,7 +223,7 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
       .active {
         display: flex;
         flex-wrap: wrap;
-        gap: 12px;
+        gap: 5px;
       }
     }
   }
