--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -79,9 +79,11 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
     padding-left: calc(15px + 10vw);
     padding-right: calc(15px + 10vw);
   }
+}
 
+@include media-breakpoint-up(xl) {
   // Remove bottom nav and panel for desktop
-  .bottom-nav{
+  .bottom-nav {
     display: none;
   }
 
@@ -98,7 +100,7 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
   }
 
   .home-page-tabs .tab-content .active {
-    max-height: calc(82vh - 42px)
+    max-height: calc(82vh - 42px);
   }
   /*
   GRID DISPLAY FOR CONTENT FEEDS FOR DESKTOP
@@ -114,8 +116,8 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
 
   // COMMENT CARDS
   .comment-post-card {
-    width: 250px;
-    max-width: 350px;
+    width: 220px;
+    max-width: 450px;
     padding: 15px;
     .post-card-body {
       display: flex;
@@ -204,7 +206,7 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
   // TODO: figure out idea max-width for
   // landscape photos
   .landscape-photo-post-card {
-    max-width: 500px;
+    max-width: 750px;
   }
 
   // TAB NAV PANE FOR HOME PAGE
@@ -228,8 +230,9 @@ Large breakpoint is 992 px wide. It's at this point that posts will switch to gr
     }
   }
 
-  #gig-items-container, #parade-info-container {
-    max-height:74vh;
+  #gig-items-container,
+  #parade-info-container {
+    max-height: 74vh;
     height: 74vh;
   }
 }
