CLIENT / style createComment.tsx

--- a/client/styles/_tabs.scss
+++ b/client/styles/_tabs.scss
@@ -23,6 +23,7 @@
   border-left: 1px solid colors.$tabUnselectedBorder;
   border-right: 1px solid colors.$tabUnselectedBorder;
   border-bottom: 1px solid colors.$tabSelectedBorder;
+  padding: 8px
 }
 
 .nav-tabs .nav-link.active {
