CLIENT and SERVER / add friendcard, update feed page server route, add tabs to feed page

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -49,6 +49,7 @@ $info: colors.$infoColor;
 @import 'navbars';
 @import 'tabs';
 @import 'postcard';
+@import 'friendcard';
 @import 'modals';
 
 @import 'login';
