--- a/client/styles/_postcard.scss
+++ b/client/styles/_postcard.scss
@@ -5,7 +5,7 @@
 // all cards
 .post-card {
   padding: 15px;
-  box-shadow: 0.6px 1.1px 1.1px hsl(0deg 0% 0% / 0.48);;
+  box-shadow: 0.6px 1.1px 1.1px hsl(0deg 0% 0% / 0.48);
   margin: 4px auto;
   border: 1.5px solid colors.$cardBorder;
   // border: none;
